test/SemanticAnalysis/Exceptions/ThrowInNoExceptViaOperator.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception ExampleError(int value);

class TestClass (int value) {
	static create = default;
	
	int add(unused int value) {
		throw ExampleError(1);
	}
}

// CHECK: .loci:15:17: error: function '::function' is declared as 'noexcept' but can throw
void function() noexcept {
	unused_result(TestClass(1) + 1);
}

// CHECK: 1 error generated.

